more bug fixed, added new webkit scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -41,8 +41,6 @@ body,
     --radius: 0.5rem;
   }
 
-  
-
   /* Full Dark */
   .dark {
     --background: 222 47% 11%;
@@ -69,24 +67,42 @@ body,
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
 
-    --border: 217.2 32.6% 17.5%;
+    --border: 217.2 32.6% 20.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #333;
+  border-radius: 15px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 
 @keyframes move {
   0% {
-    transform: translate(0,0);
+    transform: translate(0, 0);
   }
   100% {
-    transform: translate(-820px,0);
+    transform: translate(-820px, 0);
   }
 }
-
-
 
 @layer base {
   * {
